--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-@import "./styles//example.scss";
+* {
+  box-sizing: border-box;
+}
 
-html,
+html {
+  height: 100%;
+}
+
 body {
+  font-family: "Poppins", sans-serif;
+  background: radial-gradient(circle at top left, #181023, #0b0519);
+  color: #c3b3d8;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #333;
+  height: 100%;
 }
