--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 <!-- learn: we have to import component first -->
-<app-header></app-header>
+<!-- learn: we can use <app-header></app-header> -->
+<app-header />
+<main>
+  <ul id="users">
+    <li>
+      <app-user />
+    </li>
+  </ul>
+</main>
